--- a/templates/root.html
+++ b/templates/root.html
@@ -10,16 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     <!-- Estilos -->
+    <link href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
   </head>
-  <body>
-    <body class="bc">
+  <body class="bc">
       <!-- Navegación -->
         {% include 'header.html' %}
       <!-- Contenido -->
-      <div class="page" style="min-height: 500px">
+      <div class="page">
         {% block content %}{% endblock %}
       </div>
       <!-- Javascript -->
