--- a/templates/forms/createEntradaPlanForm.html
+++ b/templates/forms/createEntradaPlanForm.html
@@ -1,7 +1,23 @@
-<div class="CreateEntradaPlanForm">
-  <h3>Nueva Entrada</h3>
-  <form method="POST"> {% csrf_token %}
-    {{ form.as_p }}
-    <p><input type="submit" class="btn btn-primary btn-block" value="Create"></p>
-  </form>
-</div>
+{% extends 'root.html' %}
+{% load static %}
+{% block title %}Nueva entrada{% endblock %}
+{% block content %}
+<style>.errorlist{color:red;}</style>
+<main role="main">
+  <div class="container">
+    <div class="row mt-3 mb-5">
+      <div class="col-md-9 mx-auto">
+        {% if error %}
+          <p>No existe un plan de produccion</p>
+        {% else %}
+          <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+            {{ form.as_p }}
+            <div class="text-center"></div>
+            <input type="submit" class="btn btn-primary" value="Crear entrada" />
+          </form>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+</main>
+{% endblock %}
