--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'create-recurso' %}"><i class="ion-ios-videocam icon-small"></i>Crear Recurso</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link btnn btn-full" href="{% url 'create-entrada' %}"><i class="ion-ios-videocam icon-small"></i>Crear Entrada Plan</a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       {% if not request.user.is_authenticated %}
