--- a/templates/header.html
+++ b/templates/header.html
@@ -17,14 +17,17 @@
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'create-entrada' %}"><i class="ion-ios-videocam icon-small"></i>Crear Entrada Plan</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link btnn btn-full" href="{% url 'create-archivo' %}"><i class="ion-ios-videocam icon-small"></i>Cargar Archivo</a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       {% if not request.user.is_authenticated %}
-      <li class="nav-item">
+<!---      <li class="nav-item">
         <a class="nav-link btnn btn-full" href="#">
           <i class="ion-ios-paper icon-small"></i>Registrarse
         </a>
-      </li>
+      </li>--->
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="#">
           <i class="ion-ios-person icon-small"></i>Acceder
