Se agrega listado de recursos

--- a/templates/forms/recurso-form.html
+++ b/templates/forms/recurso-form.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Crear concurso{% endblock %}
 {% block content %}
+{% include 'forms/recurso_menu.html' %}
 <style>.errorlist{color:red;}</style>
 <main role="main">
   <div class="container">
