--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
         <a class="nav-link btnn btn-full" href="{% url 'index' %}"><i class="ion-ios-home icon-small"></i>Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="{% url 'create-recurso' %}"><i class="ion-ios-videocam icon-small"></i>Crear Recurso</a>
+        <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'create-entrada' %}"><i class="ion-ios-videocam icon-small"></i>Crear Entrada Plan</a>
