--- a/SGRD/static/css/main.css
+++ b/SGRD/static/css/main.css
@@ -20,6 +20,10 @@ body {
     background-color: #fff;
 }
 
+.navu-sec{
+    background-color: #ecf0f1;
+}
+
 
 /*-------- BUTTONS ----------*/
 
@@ -47,7 +51,7 @@ input[type=submit] {
 
 .btn-ghost:link,
 .btn-ghost:visited {
-    border: 1px solid #ffeaa7;
+    border: 2px solid #ffeaa7;
     color: #3d3d3d;
 }
 
@@ -65,7 +69,7 @@ input[type=submit]:active {
 
 .btn-ghost:hover,
 .btn-ghost:active {
-    border: 1px solid #fdcb6e;
+    border: 2px solid #fdcb6e;
     color: #3d3d3d;
 }
 
@@ -78,9 +82,6 @@ input[type=submit]:active {
     margin-left: 5%
 }
 
-.page {
-
-}
 
 /* Icons */
 
@@ -96,3 +97,20 @@ input[type=submit]:active {
     margin-top: -5px;
 }
 
+/*-------- LINKS ----------*/
+
+a:link,
+a:visited {
+    color: #fdcb6e;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #ffeaa7;
+    -webkit-transition: border-botton 0.2s, color 0.2s;
+    transition: border-botton 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+    color: #3d3d3d;
+    border-bottom: 1px solid transparent;
+}
