--- a/templates/forms/createEntradaPlanForm.html
+++ b/templates/forms/createEntradaPlanForm.html
@@ -7,15 +7,12 @@
   <div class="container">
     <div class="row mt-3 mb-5">
       <div class="col-md-9 mx-auto">
-        {% if error %}
-          <p>No existe un plan de produccion</p>
-        {% else %}
-          <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-            {{ form.as_p }}
-            <div class="text-center"></div>
-            <input type="submit" class="btn btn-primary" value="Crear entrada" />
-          </form>
-        {% endif %}
+        <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+          {{ form.as_p }}
+          <div class="text-center"></div>
+          <input type="submit" class="btn btn-primary" value="Crear entrada" />
+          <button onclick="window.location.href='{% url 'view-plan' idRecurso=recurso.id %}'" type="button" class="btn btn-secondary">Cancelar</button>
+        </form>
       </div>
     </div>
   </div>
