--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
         <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="{% url 'create-entrada' %}"><i class="ion-ios-videocam icon-small"></i>Crear Entrada Plan</a>
+        <a class="nav-link btnn btn-full" href="{% url 'view-plan' idRecurso=1 %}"><i class="ion-ios-videocam icon-small"></i>Plan de Producción</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'create-archivo' %}"><i class="ion-ios-videocam icon-small"></i>Cargar Archivo</a>
