--- a/templates/forms/recurso_list.html
+++ b/templates/forms/recurso_list.html
@@ -36,7 +36,7 @@
                     </p>
                    <p>
                       <a href="#">Detalle</a>
-                  | <a href="#">Adjuntar Archivo</a>
+                  | <a href="{% url 'create-archivo' %}">Adjuntar Archivo</a>
                   | <a href="#">Plan Producción</a>
                   | <a href="#">Borrar</a>
                     </p>
