Editar plan de produccion

--- a/templates/SGRD/planProduccion.html
+++ b/templates/SGRD/planProduccion.html
@@ -56,4 +56,16 @@
   </div>
   <div class="col-md-9"></div>
 </div>
+<div class="row">
+    <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <h5 class="title">Descripción</h5>
+            <div class="card w-100">
+                <div class="card-body">
+                <p>{{ plan.descripcion }}</p>
+                </div>
+            </div>
+        </div>
+    <div class="col-md-1"></div>
+</div>
 {% endblock %}
