--- a/templates/header.html
+++ b/templates/header.html
@@ -8,9 +8,9 @@
   </button>
   <div class="collapse navbar-collapse" id="ned">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+<!--      <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'index' %}"><i class="ion-ios-home icon-small"></i>Inicio</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
       </li>
@@ -21,8 +21,11 @@
         <a class="nav-link btnn btn-full" href="{% url 'create-archivo' %}"><i class="ion-ios-videocam icon-small"></i>Cargar Archivo</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link btnn btn-full" href="{% url 'crear-plan' idRecurso=1 %}"><i class="ion-ios-videocam icon-small"></i>Crear Plan</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'editar-plan' idPlan=1 %}"><i class="ion-ios-videocam icon-small"></i>Editar Plan</a>
-      </li
+      </li>
     </ul>
     <ul class="navbar-nav">
       {% if not request.user.is_authenticated %}
