--- a/SGRD/static/css/main.css
+++ b/SGRD/static/css/main.css
@@ -114,3 +114,42 @@ a:active {
     color: #3d3d3d;
     border-bottom: 1px solid transparent;
 }
+
+
+/* Tablas */
+
+.contentTitle
+{
+  margin-top: 1vh;
+}
+
+.recursoName
+{
+  color: #7a7a7a;
+}
+
+.dia h2
+{
+  display: inline-block;
+  padding: 0.5vh;
+  background-color: #f4f9ff;
+  border: 1px solid #babdc1;
+  border-bottom: None;
+}
+
+.entradas
+{
+  position: relative;
+  top: -12px;
+  margin-top: 0;
+  padding: 1vh;
+  background-color: #f4f9ff;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px #888888;
+  overflow: hidden;
+}
+
+.newEntradaBtn
+{
+  margin-bottom: 10vh;
+}
