--- a/templates/forms/recurso_detail.html
+++ b/templates/forms/recurso_detail.html
@@ -5,10 +5,6 @@
 {% include 'forms/recurso_menu.html' %}
 <main role="main">
   <div class="container mb-4">
-    {% if not recurso_list %}
-      <h3 class="text-center">No tienes recursos registrados.</h3>
-    {% else %}
-    {% for recurso in recurso_list|dictsort:"fecha_creacion" reversed%}
       <div class="row mt-3">
         <div class="card w-100">
             <div class="card-body">
@@ -35,48 +31,40 @@
                       {{recurso.descripcion|striptags|safe|truncatechars:"200"}}
                     </p>
                    <p>
-                      <a href="{% url 'recurso' recurso.id %}">Detalle</a>
+                      <a href="#">Detalle</a>
                   | <a href="{% url 'create-archivo' %}">Adjuntar Archivo</a>
                   | <a href="#">Plan Producción</a>
                   | <a href="#">Borrar</a>
                     </p>
               </div>
-
+                {% if archivos %}
+            <div class="row">
+              <div class="col-md-1"></div>
+              <table class="col-md-10 entradas table table-striped table-bordered">
+                <thead>
+                  <th>Nombre</th>
+                  <th>Fecha</th>
+                  <th>Archivo</th>
+                  <th>Descargar</th>
+                </thead>
+                <tbody>
+                  {% for archivo in archivos %}
+                  <tr>
+                    <td>{{ archivo.nombre }}</td>
+                    <td>{{ archivo.fecha_creacion }}</td>
+                    <td>{{ archivo.ruta.name }}</td>
+                    <td>
+                        <a class="btnn btn-full" href="{{ archivo.ruta.url }}" download> <i class="ion-ios-cloud-download icon-small"> </i>Descargar </a>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
+           {% endif %}
             </div>
         </div>
       </div>
-    {% endfor %}
-    {% endif %}
   </div>
-    <!-- Menú de paginación -->
-    {% if is_paginated %}
-      <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-          {% if page_obj.has_previous %}
-            <li class="page-item ">
-              <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
-            </li>
-          {% else %}
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">&laquo;</a>
-            </li>
-          {% endif %}
-          {% for i in paginator.page_range %}
-            <li class="page-item {% if page_obj.number == i %}active{% endif %}">
-              <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-            </li>
-          {% endfor %}
-          {% if page_obj.has_next %}
-            <li class="page-item ">
-              <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
-            </li>
-          {% else %}
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">&raquo;</a>
-            </li>
-          {% endif %}
-        </ul>
-      </nav>
-    {% endif %}
 </main>
 {% endblock %}
