Plan produccion - validar que solo exista uno por recurso

--- a/templates/forms/createEntradaPlanForm.html
+++ b/templates/forms/createEntradaPlanForm.html
@@ -1,6 +1,6 @@
 {% extends 'root.html' %}
 {% load static %}
-{% block title %}Nueva entrada{% endblock %}
+{% block title %}Crear Plan de Producción{% endblock %}
 {% block content %}
 <style>.errorlist{color:red;}</style>
 <main role="main">
