--- a/templates/forms/editarPlanProduccion.html
+++ b/templates/forms/editarPlanProduccion.html
@@ -1,6 +1,6 @@
 {% extends 'root.html' %}
 {% load static %}
-{% block title %}Crear concurso{% endblock %}
+{% block title %}Editar Plan de Producción{% endblock %}
 {% block content %}
 <style>.errorlist{color:red;}</style>
 <main role="main">
