--- a/templates/header.html
+++ b/templates/header.html
@@ -8,9 +8,9 @@
   </button>
   <div class="collapse navbar-collapse" id="ned">
     <ul class="navbar-nav mr-auto">
-<!--      <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'index' %}"><i class="ion-ios-home icon-small"></i>Inicio</a>
-      </li>-->
+      </li>
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
       </li>
