Se realiza el home del sitio

--- a/templates/forms/recurso_menu.html
+++ b/templates/forms/recurso_menu.html
@@ -10,7 +10,7 @@
           <a class="btnn btn-ghost" href="{% url 'create-recurso' %}"><i class="ion-ios-add-circle icon-small"></i>Crear recurso</a>
         </li>
         <li class="nav-item">
-          <a class="btnn btn-ghost" href="{% url 'recursos' %}"><i class="ion-ios-list-box icon-small"></i>Listar recursos</a>
+          <!--<a class="btnn btn-ghost" href="{% url 'recursos' %}"><i class="ion-ios-list-box icon-small"></i>Listar recursos</a>-->
         </li>
       </ul>
     </div>
