--- a/templates/forms/recurso_list.html
+++ b/templates/forms/recurso_list.html
@@ -3,8 +3,34 @@
 {% block title %}Recursos{% endblock %}
 {% block content %}
 {% include 'forms/recurso_menu.html' %}
+<link rel="stylesheet" href="/static/css/home.css">
 <main role="main">
-  <div class="container mb-4">
+ <div class="row">
+        <div class="col-md-4 intro">
+            <div class="title">
+                Introducción
+            </div>
+            <div>
+                <p>
+                    Para resolver la necesidad del Centro de innovación tecnológica (Conecta-TE), el equipo 2 tiene como
+                    objetivo resolver la necesidad de la administración de los recursos de video y animaciones. Para este
+                    primer Sprint, el equipo tuvo como prioridad desarrollar las siguientes historias de usuario teniendo
+                    en cuenta que la velocidad del equipo es de 36PHU:
+                </p>
+                <ul>
+                    <li>Agregar recurso o crudo</li>
+                    <li>Diligenciar descripción del recurso</li>
+                    <li>Crear plan de producción</li>
+                    <li>Editar plan de producción</li>
+                    <li>Consultar plan de producción</li>
+                    <li>Crear entrada del plan de producción</li>
+                    <li>Adjuntar archivos</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-8 intro">
+            <div class="title">Listado de recursos</div>
+            <div class="container mb-4">
     {% if not recurso_list %}
       <h3 class="text-center">No tienes recursos registrados.</h3>
     {% else %}
@@ -78,5 +104,8 @@
         </ul>
       </nav>
     {% endif %}
+        </div>
+
+    </div>
 </main>
 {% endblock %}
