--- a/templates/header.html
+++ b/templates/header.html
@@ -2,14 +2,14 @@
 <nav class="navbar navbar-expand-lg navbar-light navu" >
 <img src="{% static 'img/logo-1.png' %}" class="logou">
 <div class="container">
-  <a class="navbar-brand" href="{% url 'index' %}">SGRD</a>
+  <!--<a class="navbar-brand" href="{% url 'index' %}">SGRD</a>-->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="ned">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link btnn btn-full" href="{% url 'index' %}"><i class="ion-ios-home icon-small"></i>Inicio</a>
+        <!--<a class="nav-link btnn btn-full" href="{% url 'index' %}"><i class="ion-ios-home icon-small"></i>Inicio</a>-->
       </li>
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
