Se realiza los ajustes de los links de redireccionamiento del recurso a plan de producción y editar plan de producción. Se controla excepción para editar plan cuando el recurso no tiene plan de producción asociado

--- a/templates/forms/editarPlanProduccion.html
+++ b/templates/forms/editarPlanProduccion.html
@@ -7,11 +7,16 @@
   <div class="container">
     <div class="row mt-3 mb-5">
       <div class="col-md-9 mx-auto">
+            {% if error %}
+            <h3>Error</h3>
+            <p>El recurso al que accedió no tiene plan de producción</p>
+            {% else %}
             <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
                     {{ form_plan.as_p }}
                 <div class="text-center"></div>
                 <input type="submit" class="btn btn-primary" value="Guardar" />
             </form>
+            {% endif %}
         </div>
     </div>
   </div>
