--- a/templates/forms/recurso_list.html
+++ b/templates/forms/recurso_list.html
@@ -61,10 +61,10 @@
                       {{recurso.descripcion|striptags|safe|truncatechars:"200"}}
                     </p>
                    <p>
-                      <a href="{% url 'recurso' recurso.id %}">Detalle</a>
+                      <a>Detalle</a>
                   | <a href="{% url 'create-archivo' recurso.id %}">Adjuntar Archivo</a>
-                  | <a href="#">Plan Producción</a>
-                  | <a href="#">Borrar</a>
+                  | <a href="{% url 'view-plan' idRecurso=recurso.id %}">Plan producción</a>
+                  | <a href="{% url 'editar-plan' idRecurso=recurso.id %}">Editar plan</a>
                     </p>
               </div>
 
