--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light navu" >
 <img src="{% static 'img/logo-1.png' %}" class="logou">
 <div class="container">
-  <!--<a class="navbar-brand" href="{% url 'index' %}">SGRD</a>-->
+  <a class="navbar-brand" href="#">SGRD</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ned" aria-controls="ned" aria-expanded="false">
     <span class="navbar-toggler-icon"></span>
   </button>
