--- a/templates/forms/crear_plan.html
+++ b/templates/forms/crear_plan.html
@@ -1,6 +1,6 @@
 {% extends 'root.html' %}
 {% load static %}
-{% block title %}Nueva entrada{% endblock %}
+{% block title %}Crear Plan de Producción{% endblock %}
 {% block content %}
 <style>.errorlist{color:red;}</style>
 <main role="main">
@@ -10,8 +10,8 @@
         <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
           {{ form.as_p }}
           <div class="text-center"></div>
-          <input type="submit" class="btn btn-primary" value="Crear" />
-          <button onclick="window.location.href='{% url 'crear-plan' idRecurso=2 %}'" type="button" class="btn btn-secondary">Cancelar</button>
+          <input type="submit" class="btnn btn-full" value="Crear entrada" />
+          <a class="btnn btn-full" href="{% url 'view-plan' idRecurso=recurso.id %}" style="background-color: #b2b2b2; border: #7f7f7f;">Cancelar</a>
         </form>
       </div>
     </div>
