--- a/templates/forms/recurso_detail.html
+++ b/templates/forms/recurso_detail.html
@@ -31,8 +31,13 @@
                       {{recurso.descripcion|striptags|safe|truncatechars:"200"}}
                     </p>
                    <p>
-                    <a href="{% url 'create-archivo' recurso.id %}">Adjuntar Archivo</a>
-                  | <a href="#">Plan Producción</a>
+                  <a href="{% url 'create-archivo' recurso.id %}">Adjuntar Archivo</a>
+                   {% if not hay_plan %}
+                   | <a href="{% url 'crear-plan' recurso.id %}">Crear plan</a>
+                   {% else %}
+                  | <a href="{% url 'view-plan' recurso.id %}">Plan producción</a>
+                  | <a href="{% url 'editar-plan' recurso.id %}">Editar plan</a>
+                   {%  endif %}
                     </p>
               </div>
                 {% if archivos %}
