Agregue  el modelo de etiquetas y ahora se muestran las etiquetas del recurso en la vista del detalle | Renombre los html para que sigan las convenciones propuestas

--- a/SGRD/static/css/main.css
+++ b/SGRD/static/css/main.css
@@ -153,3 +153,12 @@ a:active {
 {
   margin-bottom: 10vh;
 }
+
+.recursoTag
+{
+  margin: 1vw;
+  border: 1px solid #7F055F;
+  border-radius: 10px;
+  width: auto;
+  height: auto;
+}
