--- a/templates/SGRD/recurso_list.html
+++ b/templates/SGRD/recurso_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Recursos{% endblock %}
 {% block content %}
-{% include 'forms/recurso_menu.html' %}
+{% include 'SGRD/recurso_menu.html' %}
 <link rel="stylesheet" href="/static/css/home.css">
 <main role="main">
  <div class="row">
