--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Recursos{% endblock %}
 {% block content %}
-{% include 'forms/recurso_menu.html' %}
+{% include 'SGRD/recurso_menu.html' %}
 <main role="main">
   <div class="container mb-4">
       <div class="row mt-3">
@@ -25,6 +25,18 @@
                      <p><b>Tipo: </b>{{recurso.tipo}}</p>
                     <p><b>Ruta: </b>{{recurso.ruta_compartida}}</p>
                   </div>
+                </div>
+                <div class="row">
+                  <h5>Etiquetas:</h5>
+                </div>
+                <div class="row">
+                  {% for tag in tags %}
+                  <div class="col-md-2 card recursoTag">
+                    <div class="card-body text-center">
+                      {{tag.nombre}}
+                    </div>
+                  </div>
+                  {% endfor %}
                 </div>
                   <h5>Descripción:</h5>
                     <p style="max-width: 90%">
