Agregue un condicional para que en el detalle solo aparescan las etiqutas cuando el recurso tiene al menos una

--- a/SGRD/static/css/main.css
+++ b/SGRD/static/css/main.css
@@ -157,7 +157,7 @@ a:active {
 .recursoTag
 {
   margin: 1vw;
-  border: 1px solid #7F055F;
+  border: 2px solid #79ADDC;
   border-radius: 10px;
   width: auto;
   height: auto;
