--- a/templates/header.html
+++ b/templates/header.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link btnn btn-full" href="{% url 'recursos' %}"><i class="ion-ios-videocam icon-small"></i>Recursos</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link btnn btn-full" href="{% url 'busqueda' %}"><i class="ion-ios-search icon-small"></i>Buscar</a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       {% if not request.user.is_authenticated %}
