--- a/templates/root.html
+++ b/templates/root.html
@@ -13,6 +13,7 @@
     <link href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap-multiselect.css' %}" type="text/css">
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
   </head>
   <body class="bc">
@@ -25,5 +26,7 @@
       <!-- Javascript -->
       <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
       <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'vendor/bootstrap/js/bootstrap-multiselect.js' %}"></script>
+      <script src="{% static 'js/busqueda.js' %}"></script>
   </body>
 </html>
