--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                   {% for tag in tags %}
-                  <div class="col-md-2 card recursoTag">
+                  <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid #{{tag.color}}; border-radius: 10px; width: auto; height: auto;">
                     <div class="card-body text-center">
                       {{tag.nombre}}
                     </div>
