--- a/templates/forms/editarEntradaPlanForm.html
+++ b/templates/forms/editarEntradaPlanForm.html
@@ -10,7 +10,7 @@
         <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
           {{ form.as_p }}
           <div class="text-center"></div>
-          <input type="submit" class="btnn btn-full" value="Guardar entrada" />
+          <input id="id_guardar" type="submit" class="btnn btn-full" value="Guardar entrada" />
           <a class="btnn btn-full" href="{% url 'view-plan' idRecurso=recurso.id %}" style="background-color: #b2b2b2; border: #7f7f7f;">Cancelar</a>
         </form>
       </div>
