--- a/SGRD/static/css/main.css
+++ b/SGRD/static/css/main.css
@@ -153,3 +153,18 @@ a:active {
 {
   margin-bottom: 10vh;
 }
+
+
+
+/* Etiquetas */
+
+.etiqueta{
+    margin: 1vw;
+    border-radius: 10px;
+    width: auto;
+    height: auto;
+}
+
+.etiqueta-item{
+    padding: 1px ;
+}
