--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -46,6 +46,20 @@
                         <p><b>Tipo: </b>{{recurso.tipo}}</p>
                       </div>
                     </div>
+                      {% if recurso.etiquetas_list %}
+                        <div class="row">
+                          <h5>Etiquetas:</h5>
+                        </div>
+                        <div class="row">
+                          {% for tag in recurso.etiquetas_list %}
+                          <div class="col-md-2 card recursoTag" style="margin: 1vw; border: 2px solid #{{tag.color}}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
+                            <div class="card-body text-center etiqueta-item">
+                              {{tag.nombre}}
+                            </div>
+                          </div>
+                          {% endfor %}
+                        </div>
+                    {% endif %}
                     <p>
                       <a href="{% url 'recurso' recurso.id %}">Detalle</a>
                     </p>
