Paso 1: Navegación hasta la forma (Verde)

--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -52,6 +52,7 @@
                   | <a href="{% url 'view-plan' recurso.id %}">Plan producción</a>
                   | <a href="{% url 'editar-plan' recurso.id %}">Editar plan</a>
                    {%  endif %}
+                  | <a href="{% url 'crear-clip' recurso.id %}">Crear clip</a>
                     </p>
               </div>
                 {% if archivos %}
