--- a/templates/SGRD/recurso_list.html
+++ b/templates/SGRD/recurso_list.html
@@ -50,8 +50,8 @@
                     <p><b>Fase: </b>{{recurso.get_fase_display}}</p>
                 </div>
 
-                  <div class="col-md-7 ">
-                     <p><b>Tipo: </b>{{recurso.tipo}}</p>
+                  <div class="col-md-7 " >
+                     <p id="id_type"><b>Tipo: </b>{{recurso.tipo}}</p>
                   </div>
                 </div>
                    <p>
