Paso 3: Se crea un clip para recurso tipo no video (Verde)

--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -52,7 +52,9 @@
                   | <a href="{% url 'view-plan' recurso.id %}">Plan producción</a>
                   | <a href="{% url 'editar-plan' recurso.id %}">Editar plan</a>
                    {%  endif %}
+                   {% if tipo_video %}
                   | <a href="{% url 'crear-clip' recurso.id %}">Crear clip</a>
+                   {% endif %}
                     </p>
               </div>
                 {% if archivos %}
