Paso 5: Crear un clip con campo tiempo final menor a tiempo inicial (Verde)

--- a/templates/forms/clip-form.html
+++ b/templates/forms/clip-form.html
@@ -15,7 +15,7 @@
                         <option value="{{file.id}}" selected >{{file.nombre}}</option>
                         {% endfor %}
                       </select>
-                <input id="create_clip" type="submit" class="btn btn-primary mt-3" value="Cargar archivo" />
+                <input id="create_clip" type="submit" class="btn btn-primary mt-3" value="Crear Clip" />
             </form>
         </div>
     </div>
