Se corrigen campos de recurso, acorde a los comentarios de presentacion del demodel sprint 1

--- a/templates/SGRD/busqueda.html
+++ b/templates/SGRD/busqueda.html
@@ -27,7 +27,7 @@
           </form>
           <div id="searchResult" >
             <h3 class="card-title">Recursos</h3>
-            {% for recurso in recursos|dictsort:"fecha_creacion" reversed%}
+            {% for recurso in recursos|dictsort:"inicio_produccion" reversed%}
             <div class="row m3 mt-2">
               <div class="card w-100">
                 <div class="card-body">
