--- a/templates/SGRD/archivo_clips.html
+++ b/templates/SGRD/archivo_clips.html
@@ -1,42 +1,77 @@
 {% extends 'root.html' %}
 {% block title %}Recursos{% endblock %}
 {% block content %}
-<main role="main">
-  <div class="container mb-4">
-    <div class="row mt-3">
-      <div class="card w-100">
-        <div class="card-body">
-          <div class="col-md-12 mx-auto">
-            <div class="row">
-              <h5 class="card-title">Clips: {{archivo.nombre}} </h5>
-            </div>
-            {% if clips|length > 0 %}
-            <div class="row">
-              <div class="col-md-6">
-                {% for cl in clips %}
-                <div class="row mb-2">
-                  <div class="card col-md-11">
-                    <div class="card-title">
-                      {{cl.nombre}}
-                    </div>
-                    <div class="card-body">
-                    </div>
+  <main role="main">
+    <div class="container mb-4">
+      <div class="row mt-3">
+        <div class="card w-100">
+          <div class="card-body">
+            <div class="col-md-12 mx-auto">
+              <div class="row">
+                <h5 class="card-title">Clips: {{ archivo.nombre }} </h5>
+              </div>
+              {% if clips|length > 0 %}
+                <div class="row">
+                  <div class="col-md-4">
+                    {% for cl in clips %}
+                      <div class="row mb-2">
+                        <div class="card col-md-11">
+                          <div class="card-title">
+                            <strong>{{ cl.nombre }}</strong>
+                          </div>
+                          <div class="card-body">
+                            Segundo inicial: {{ cl.inicio }}<br>
+                            Segundo final: {{ cl.final }}<br><br>
+                            <a href="#{{ cl.inicio }}-{{ cl.final }}"
+                               onclick="playClip({{ cl.inicio }}, {{ cl.final }})" class="btnn btn-full">
+                              Reproducir
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    {% endfor %}
+                  </div>
+                  <div class="col-md-8">
+                    <video id="video-clip" class="video-js vjs-default-skin vjs-16-9" controls preload="none"
+                           poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
+                      <source src="{{archivo.get_absolute_url}}"
+                              type="video/mp4">
+                      <p class="vjs-no-js">To view this video please enable JavaScript, and
+                        consider upgrading to a web browser that <a
+                            href="http://videojs.com/html5-video-support/" target="_blank">supports
+                          HTML5 video</a></p>
+                    </video>
+                    <script>
+                        document.addEventListener('DOMContentLoaded', function () {
+                            const myPlayer = videojs('video-clip')
+
+                            myPlayer.ready(function () {
+                                console.log('ready')
+                                window.myPlayer = myPlayer
+                            })
+                        }, false)
+                        window.playClip = (start, end) => {
+                            if (!window.myPlayer) return alert('El video aún no ha sido cargado')
+                            window.myPlayer.currentTime(start)
+                            window.myPlayer.play()
+                            window.myPlayer.on('timeupdate', () => {
+                                if (window.myPlayer.currentTime() < start || window.myPlayer.currentTime() > end) {
+                                    window.myPlayer.off('timeupdate')
+                                }
+                                if (window.myPlayer.currentTime() >= end) {
+                                    window.myPlayer.pause()
+                                    window.myPlayer.off('timeupdate')
+                                }
+                            })
+                        }
+                    </script>
                   </div>
                 </div>
-                {% endfor %}
-              </div>
-              <div class="col-md-6">
-                <video class="video-js vjs-default-skin mw-100 mh-100" controls preload="none" poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
-                  <source src="{{archivo.get_absolute_url}}" type="video/mp4">
-                  <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-                </video>
-              </div>
+              {% endif %}
             </div>
-            {% endif %}
           </div>
         </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
 {% endblock %}
