--- a/templates/SGRD/archivo_clips.html
+++ b/templates/SGRD/archivo_clips.html
@@ -21,12 +21,12 @@
                           </div>
                           <div class="card-body">
                             Segundo inicial: {{ cl.inicio }}<br>
-                            Segundo final: {{ cl.final }}<br><br>
+                            Segundo final: {{ cl.final }}<br>
                             <a href="#{{ cl.inicio }}-{{ cl.final }}"
-                               onclick="playClip({{ cl.inicio }}, {{ cl.final }})" class="btnn btn-full">
+                               onclick="playClip({{ cl.inicio }}, {{ cl.final }})" class="btnn btn-full mt-1 mb-1">
                               Reproducir
                             </a>
-                            <div class="row">
+                            <div class="row mt-1">
                               {% for tag in cl.etiquetas.all %}
                                 <div class="col-md-4 card recursoTag"
                                      style="border: 2px solid #{{ tag.color }}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
@@ -42,8 +42,7 @@
                     {% endfor %}
                   </div>
                   <div class="col-md-8">
-                    <video id="video-clip" class="video-js vjs-default-skin vjs-16-9" controls preload="none"
-                           poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
+                    <video id="video-clip" class="video-js vjs-default-skin vjs-16-9" controls preload="none" data-setup="{}">
                       <source src="{{ archivo.get_absolute_url }}"
                               type="video/mp4">
                       <p class="vjs-no-js">To view this video please enable JavaScript, and
