--- a/templates/root.html
+++ b/templates/root.html
@@ -14,7 +14,7 @@
     <link href="{% static 'vendor/select2/css/select2.min.css' %}" rel="stylesheet" />
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
-    <link href="http://vjs.zencdn.net/7.0/video-js.min.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/7.0/video-js.min.css" rel="stylesheet">
     <link href="{% static 'css/main.css' %}" rel="stylesheet" />
   </head>
   <body class="bc">
@@ -29,6 +29,6 @@
       <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
       <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
       <script src="{% static 'js/busqueda.js' %}"></script>
-      <script src="http://vjs.zencdn.net/7.0/video.min.js"></script>
+      <script src="https://vjs.zencdn.net/7.0/video.min.js"></script>
   </body>
 </html>
