--- a/templates/SGRD/recurso_detail.html
+++ b/templates/SGRD/recurso_detail.html
@@ -100,14 +100,14 @@
                     <td>{{ archivo.fecha_creacion }}</td>
                     <td>{{ archivo.ruta.name }}</td>
                     <td>
-                        <a class="btnn btn-full" href="{{ archivo.ruta.url }}" download><i class="ion-ios-cloud-download icon-small"></i>Descarga</a>
+                        <a class="btnn btn-full" href="{{ archivo.get_absolute_url}}" download><i class="ion-ios-cloud-download icon-small"></i>Descarga</a>
                     </td>
                     {% if tipo_video %}
-                    {% if '.mp4' in archivo.ruta.name %}
                     <td>
+                    {% if '.mp4' in archivo.ruta.name %}
                         <a class="btnn btn-full" href="{% url 'ver-clips' archivo.id %}"><i class="ion-ios-videocam icon-small"></i>Clips</a>
-                    </td>
                     {% endif %}
+                    </td>
                     {% endif %}
                   </tr>
                   {% endfor %}
