--- a/templates/SGRD/archivo_clips.html
+++ b/templates/SGRD/archivo_clips.html
@@ -29,7 +29,7 @@
                             <div class="row mt-1">
                               {% for tag in cl.etiquetas.all %}
                                 <div class="col-md-6 card recursoTag"
-                                     style="border: 2px solid #{{ tag.color }}; border-radius: 10px; width: auto; height: auto; margin-right: 1px;">
+                                     style="border: 2px solid #{{ tag.color }}; border-radius: 10px; width: auto; height: auto;">
                                   <div class="card-body text-center etiqueta-item">
                                     {{ tag.nombre }}
                                   </div>
